--- a/index.html
+++ b/index.html
@@ -1,24 +1,12 @@
 <html>
-<header>
-<title>My page</title>
-<link rel="stylesheet" href="mypage.css"></link>
-</header>
-<body style="background-color:#00ff00">
-<h1>This is heading 1</h1>
-<h2>This is heading 2</h2>
-<!-- <h3>This is heading 3</h3> -->
-<p style="color:#FF0000">This is paragraph</p>
-<a href="https://www.google.com">google</a><br>
-<img src="file.png" style="height:80px;width:80px"></img>
-<div style="float:right;height:100px;color:#345643">
-<p>sidfbvi</p>
-<h1>difbvqpieufvb</h1>
-</div>
-<div class="myclass">
-<h1>myclass: lines</h1>
-<div>
-<div id="myid">
-<h1>myid: lines</h1>
-</div>
+<head>
+<title>my website </title>
+</head>
+<body style="background-color:#C0ffdd">
+<a href="https://google.com" target="_blank"><img src="google.jpg" style="he    ight:100px;width:100px;float:left;margin-right:10px"></img></a>
+<a href="https://youtube.com" target="_blank"><img src="you tube.png" style=    "height:100px;width:100px;float:left;margin-right:10px"></img></a>
+<a href="https://cricbuzz.com" target="_blank"><img src="cricbuzz.png" style    ="height:100px;width:100px;float:left;margin-right:10px"></img></a>
+<a href="https://netflix.com" target="_blank"><img src="netflix.png" style="    height:100px;width:100px;float:left;margin-right:10px"></img></a>
+<a href="https://amazon.com" target="_blank"><img src="amazon.gif" style="he    ight:100px;width:100px;float:left;margin-right:10px"></img></a>
 </body>
 </html>
