corrected image path in index page
Signed-off-by: Adarsh Kumar <adarsh19raj@gmail.com>

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <title>my website </title>
 </head>
 <body style="background-color:#C0ffdd">
-<a href="https://google.com" target="_blank"><img src="google.jpg"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
-<a href="https://youtube.com" target="_blank"><img src="youtube.png"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
-<a href="https://cricbuzz.com" target="_blank"><img src="cricbuzz.png"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
-<a href="https://netflix.com" target="_blank"><img src="netflix.png"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
-<a href="https://amazon.com" target="_blank"><img src="amazon.gif"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
+<a href="https://google.com" target="_blank"><img src="img/google.jpg"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
+<a href="https://youtube.com" target="_blank"><img src="img/youtube.png"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
+<a href="https://cricbuzz.com" target="_blank"><img src="img/cricbuzz.png"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
+<a href="https://netflix.com" target="_blank"><img src="img/netflix.png"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
+<a href="https://amazon.com" target="_blank"><img src="img/amazon.gif"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
 </body>
 </html>
