update index file
Signed-off-by: Adarsh Kumar <adarsh19raj@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <a href="https://cricbuzz.com" target="_blank"><img src="img/cricbuzz.png"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
 <a href="https://netflix.com" target="_blank"><img src="img/netflix.png"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
 <a href="https://amazon.com" target="_blank"><img src="img/amazon.gif"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
+<a href="https://primevideo.com" target="_blank"><img src="img/primevideo.jpeg"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
 </body>
 </html>
