--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <head>
 <title>my website </title>
 </head>
-<body style="background-color:#C0ffdd">
-<a href="https://google.com" target="_blank"><img src="img/google.jpg"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
-<a href="https://youtube.com" target="_blank"><img src="img/youtube.png"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
-<a href="https://cricbuzz.com" target="_blank"><img src="img/cricbuzz.png"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
-<a href="https://netflix.com" target="_blank"><img src="img/netflix.png"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
-<a href="https://amazon.com" target="_blank"><img src="img/amazon.gif"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
-<a href="https://primevideo.com" target="_blank"><img src="img/primevideo.jpeg"style="height:100px;width:100px;float:left;margin-right:10px"></img></a>
+<!--<body style="background-color:#C0ffdd">-->
+<body style="background-image:url(img/background.jpeg)">
+<a href="https://google.com" target="_blank"><img src="img/google.jpg"style="height:220px;width:220px;float:left;margin-right:80px"></img></a>
+<a href="https://youtube.com" target="_blank"><img src="img/youtube.png"style="height:220px;width:220px;float:left;margin-right:80px"></img></a>
+<a href="https://cricbuzz.com" target="_blank"><img src="img/cricbuzz.png"style="height:220px;width:220px;float:left;margin-right:80px"></img></a>
+<a href="https://netflix.com" target="_blank"><img src="img/netflix.png"style="height:220px;width:220px;float:left;margin-right:80px"></img></a>
+<a href="https://amazon.com" target="_blank"><img src="img/amazon.gif"style="height:220px;width:220px;float:left;margin-right:80px"></img></a>
+<a href="https://primevideo.com" target="_blank"><img src="img/primevideo.jpeg"style="height:220px;width:220px;float:left;margin-right:80px"></img></a>
 </body>
 </html>
