--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <a href="https://netflix.com" target="_blank"><img src="img/netflix.png"style="height:220px;width:220px;float:left;margin:110px"></img></a>
 <a href="https://amazon.com" target="_blank"><img src="img/amazon.gif"style="height:220px;width:220px;float:left;margin:110px"></img></a>
 <a href="https://primevideo.com" target="_blank"><img src="img/primevideo.jpeg"style="height:220px;width:220px;float:left;margin:110px"></img></a>
+<a href="https://hotstar.com" target="_blank"><img src="img/hotstar.jpg"style="height:220px;width:220px;float:left;margin:110px"></img></a>
+<a href="https://linkedin.com" target="_blank"><img src="img/linkedin.png"style="height:220px;width:220px;float:left;margin:110px"></img></a>
 </body>
 </html>
