--- a/index.html
+++ b/index.html
@@ -2,15 +2,69 @@
 <head>
 <title>my website </title>
 </head>
-<!--<body style="background-color:#C0ffdd">-->
-<body style="background-image:url(img/background.jpeg)">
-<a href="https://google.com" target="_blank"><img src="img/google.jpg"style="height:220px;width:220px;float:left;margin:110px"></img></a>
-<a href="https://youtube.com" target="_blank"><img src="img/youtube.png"style="height:220px;width:220px;float:left;margin:110px"></img></a>
-<a href="https://cricbuzz.com" target="_blank"><img src="img/cricbuzz.png"style="height:220px;width:220px;float:left;margin:110px"></img></a>
-<a href="https://netflix.com" target="_blank"><img src="img/netflix.png"style="height:220px;width:220px;float:left;margin:110px"></img></a>
-<a href="https://amazon.com" target="_blank"><img src="img/amazon.gif"style="height:220px;width:220px;float:left;margin:110px"></img></a>
-<a href="https://primevideo.com" target="_blank"><img src="img/primevideo.jpeg"style="height:220px;width:220px;float:left;margin:110px"></img></a>
-<a href="https://hotstar.com" target="_blank"><img src="img/hotstar.jpg"style="height:220px;width:220px;float:left;margin:110px"></img></a>
-<a href="https://linkedin.com" target="_blank"><img src="img/linkedin.png"style="height:220px;width:220px;float:left;margin:110px"></img></a>
+<body style="background-color:#C0ffdd">
+<!--<body style="background-image:url(img/background.jpeg)">-->
+<a href="https://google.com" target="_blank"><img src="img/google.jpg"style="height:220px;width:220px;float:left;margin:125px"></img></a>
+<a href="https://youtube.com" target="_blank"><img src="img/youtube.png"style="height:220px;width:220px;float:left;margin:125px"></img></a>
+<a href="https://cricbuzz.com" target="_blank"><img src="img/cricbuzz.png"style="height:220px;width:220px;float:left;margin:125px"></img></a>
+<a href="https://netflix.com" target="_blank"><img src="img/netflix.png"style="height:220px;width:220px;float:left;margin:125px"></img></a>
+<a href="https://amazon.com" target="_blank"><img src="img/amazon.gif"style="height:220px;width:220px;float:left;margin:125px"></img></a>
+<a href="https://primevideo.com" target="_blank"><img src="img/primevideo.jpeg"style="height:220px;width:220px;float:left;margin:125px"></img></a>
+<a href="https://hotstar.com" target="_blank"><img src="img/hotstar.jpg"style="height:220px;width:220px;float:left;margin:125px"></img></a>
+<a href="https://linkedin.com" target="_blank"><img src="img/linkedin.png"style="height:220px;width:220px;float:left;margin:125px"></img></a>
+
+<h1>FORM SUBMISSION</h1>
+  <form action="backend.php">
+  <label for="name">Name</label>
+  <div>
+  <input type="text" name="myname" id="name">
+  </div>
+  <br>
+  <label for="email">Email</label>
+  <div>
+  <input type="email" name="myemail" id="email">
+  </div>
+  <br>
+  <div>
+  date of birth: <input type="date" name="mydate">
+  </div>
+  <br>
+  <div>
+  age : <input type="number" name="mynumber">
+  </div>
+  <br>
+  <div>
+  Are you eligible: <input type="checkbox" name="myeligibility">
+  </div>
+  <br>
+  <div>
+  Gender :male<input type="radio" name="mygender">Female<input type="radio" name="mygender">other<input type="radio" name="mygender">
+  </div>
+  <br>
+  <div>
+  write about yourself:<br><textarea name="mytext" cols="75" rows="20"></textarea>
+  </div>
+ <br>
+ <div>
+ <label for="car">car</label>
+   <select name="mycar" id="car">
+      <option value="swift">swift D'zire</option>
+      <option value="ferrari">ferrari</option>
+      <option value="rolls royce">rolls royce</option>
+    </select>
+  </div>
+  <br>
+  <div>
+  password:<input type="password" name="password">
+  </div>
+  <br>
+  <div>
+  <input type="submit" value="submit now">
+  </div>
+  <br>
+  <div>
+  <input type="reset" value="reset now">
+  </div>
+  </form>
 </body>
 </html>
